--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
       </nav>
       <i class="toggle fas fa-bars fa-2x"></i>
     </header>
+    <nav class="menu">
+      <ul>
+        <li class="active">Home</li>
+        <li>Matérias</li>  
+        <li>Projetos</li>
+        <li>Dicas e Tutoriais</li>
+        <li>Boletim</li>
+      </ul>
+    </nav>
   </main>
   <script src="js/script.js"></script>
 </body>
