C2 - Menu Mobile Responsivo e lógica

--- a/index.html
+++ b/index.html
@@ -44,11 +44,38 @@
     </header>
     <nav class="menu">
       <ul>
-        <li class="active">Home</li>
-        <li>Matérias</li>  
-        <li>Projetos</li>
-        <li>Dicas e Tutoriais</li>
-        <li>Boletim</li>
+        <li class="list-item active">Home</li>
+        <li class="list-item dropdown">Matérias
+          <ul class="menu-dropdown hide">
+            <a href=""><li>Artes</li></a>
+            <a href=""><li>Biologia</li></a>
+            <a href=""><li>Educação Física</li></a>
+            <a href=""><li>Física</li></a>
+            <a href=""><li>Filosofia</li></a>
+            <a href=""><li>Geografia</li></a>
+            <a href=""><li>História</li></a>
+            <a href=""><li>Inglês</li></a>
+            <a href=""><li>Matemática</li></a>
+            <a href=""><li>Português</li></a>
+            <a href=""><li>Química</li></a>
+            <a href=""><li>Sociologia</li></a>
+          </ul>
+        </li>  
+        <li class="list-item dropdown">Projetos
+          <ul class="menu-dropdown hide">
+            <a href=""><li>Tcc</li></a>
+            <a href=""><li>Tulman Repórter</li></a>
+            <a href=""><li>Talk Tulman Show</li></a>
+            <a href=""><li>Tulman News</li></a>
+          </ul>
+        </li>
+        <li class="list-item dropdown">Dicas e Tutoriais
+          <ul class="menu-dropdown hide">
+            <a href=""><li>Google Forms</li></a>
+            <a href=""><li>Normas ABNT</li></a>
+          </ul>
+        </li>
+        <a href=""><li class="list-item">Boletim</li></a>
       </ul>
     </nav>
   </main>
