C3 - Design menu mobile

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Novo Projeto Sass</title>
     <!--Font Poppins-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <!--Normalize.css-->
     <link rel="stylesheet" type="text/css" href="css/normalize.css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -20,13 +20,13 @@
       <div class="logo back">
         <img src="img/logo-coluna.png" alt="Escola Estadual Marcelo Tulman Neto">
       </div>
-      <div class="contact email back">
+      <div class="contact email">
         <p class="contactTitle">Email</p>
         <div class="text">
           <a href="mailto:contato@marcelotulman.com.br"><p><i class="fas fa-envelope"></i>contato@marcelotulman.com.br</p></a>
         </div>
       </div>
-      <div class="contact phone back">
+      <div class="contact phone">
         <p class="contactTitle">Telefone</p>
         <div class="text">
           <p><i class="fas fa-phone"></i>11 2539-0362</i></p>
@@ -46,6 +46,7 @@
       <ul>
         <li class="list-item active">Home</li>
         <li class="list-item dropdown">Matérias
+          <span class="arrow fas fa-arrow-down"></span>
           <ul class="menu-dropdown hide">
             <a href=""><li>Artes</li></a>
             <a href=""><li>Biologia</li></a>
@@ -62,6 +63,7 @@
           </ul>
         </li>  
         <li class="list-item dropdown">Projetos
+          <span class="arrow fas fa-arrow-down"></span>
           <ul class="menu-dropdown hide">
             <a href=""><li>Tcc</li></a>
             <a href=""><li>Tulman Repórter</li></a>
@@ -70,6 +72,7 @@
           </ul>
         </li>
         <li class="list-item dropdown">Dicas e Tutoriais
+          <span class="arrow fas fa-arrow-down"></span>
           <ul class="menu-dropdown hide">
             <a href=""><li>Google Forms</li></a>
             <a href=""><li>Normas ABNT</li></a>
