--- a/index.html
+++ b/index.html
@@ -81,7 +81,12 @@
         <a href=""><li class="list-item">Boletim</li></a>
       </ul>
     </nav>
+    <section class="banner">  
+      <i class="fas fa-arrow-left fa-3x"></i>
+      <i class="fas fa-arrow-right fa-3x"></i>
+    </section>
   </main>
   <script src="js/script.js"></script>
+  <script src="js/carousel.js"></script>
 </body>
 </html>
