--- a/index.html
+++ b/index.html
@@ -85,6 +85,43 @@
       <i class="fas fa-arrow-left fa-3x"></i>
       <i class="fas fa-arrow-right fa-3x"></i>
     </section>
+    <section class="ensinos">
+      <section class="cards">
+        <div class="card">
+          <div class="card-content">
+            <div class="card-icons">
+            <img src="img/icons/aluno.svg">
+            <img src="img/icons/aluna.svg">
+          </div>
+          <h1>Ensino Fundamental 2</h1>
+          <p>Etapa em que os alunos devem aprender a serem mais independentes e organizados, pois precisarão lidar com diversos tipos de conhecimentos e informações</p>
+          </div>
+          <div class="card-action">
+            <button>Matricule-se</button>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-content">
+            <img src="img/icons/graduacao.svg">
+            <h1>Ensino Médio</h1>
+            <p>O ensino médio é, então, uma etapa que permite a criação e o fortalecimento de laços de amizade que podem até mesmo durar a vida toda, além de proporcionar atividades que envolvem o autoconhecimento e outras questões.</p>
+          </div>
+          <div class="card-action">
+            <button>Matricule-se</button>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-content">
+            <img src="img/icons/livros.svg">
+            <h1>EJA</h1>
+            <p>Modalidade de ensino destinada aos jovens, adultos e idosos que não tiveram acesso à educação na escola na idade apropriada. Permite que o aluno retome os estudos, possibilitando sua qualificação para conseguir melhores oportunidades no mercado de trabalho.</p>
+          </div>
+          <div class="card-action">
+            <button>Matricule-se</button>
+          </div>
+        </div>
+      </section>
+    </section>
   </main>
   <script src="js/script.js"></script>
   <script src="js/carousel.js"></script>
