C7 - Iniciando seção About

--- a/index.html
+++ b/index.html
@@ -85,6 +85,29 @@
       <i class="fas fa-arrow-left fa-3x"></i>
       <i class="fas fa-arrow-right fa-3x"></i>
     </section>
+    <section class="about">
+      <div class="about-content">
+        <h1>Sobre Nós</h1>
+        <div class="container">
+          <div class="card">
+            <h2><i class="fas fa-hourglass-half"></i>Nossa História</h2>
+            <p>A história do Marcelo Tulman começa em 1984, ministrando o Ensino Fundamental completo e o Ensino Médio, acompanhando e formando os alunos desde o início dos seus estudos.</p>
+          </div>
+          <div class="card">
+            <h2><i class="fas fa-chalkboard-teacher"></i>Nossa Equipe</h2>
+            <p>A equipe é formada por profissionais especializados e comprometidos com o desenvolvimento dos alunos. Nossa misão é promover conhecimento, socialização formando nossos alunos para se tornarem cidadãos competentes.</p>
+          </div>
+          <div class="card">
+            <h2><i class="fas fa-school"></i>Nossa Estrutura</h2>
+            <p>O Marcelo Tulman Neto possuí ambientes com grandes dimensões, 12 salas de aula, uma quadra coberta e espaço para socialização dos alunos durante os intervalos.</p>
+          </div>
+          <div class="card">
+            <h2><i class="fas fa-book"></i>Nossa Proposta</h2>
+            <p>Nosso objetivo é desenvolver o diálogo, a participação e a cooperação dos alunos, através de atividades práticas e teóricas do dia a dia, a fim de torná-los cidadãos competentes, conscientes e responsáveis</p>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="ensinos">
       <section class="cards">
         <div class="card">
