C8 - Finalizando seção About, refatorando cards com @extend, add CNAME

--- a/index.html
+++ b/index.html
@@ -88,22 +88,35 @@
     <section class="about">
       <div class="about-content">
         <h1>Sobre Nós</h1>
+        <p>Educação de qualidade para formar cidadãos competentes, conscientes e responsáveis.</p>
         <div class="container">
           <div class="card">
-            <h2><i class="fas fa-hourglass-half"></i>Nossa História</h2>
-            <p>A história do Marcelo Tulman começa em 1984, ministrando o Ensino Fundamental completo e o Ensino Médio, acompanhando e formando os alunos desde o início dos seus estudos.</p>
+            <div class="text-card">
+              <h2><i class="fas fa-hourglass-half"></i>Nossa História</h2>
+              <p>A história do Marcelo Tulman começa em 1984, ministrando o Ensino Fundamental completo e o Ensino Médio, acompanhando e formando os alunos desde o início dos seus estudos.</p>
+            </div>
+            <button class="">Veja mais</button>
           </div>
           <div class="card">
-            <h2><i class="fas fa-chalkboard-teacher"></i>Nossa Equipe</h2>
-            <p>A equipe é formada por profissionais especializados e comprometidos com o desenvolvimento dos alunos. Nossa misão é promover conhecimento, socialização formando nossos alunos para se tornarem cidadãos competentes.</p>
+            <div class="text-card">
+              <h2><i class="fas fa-chalkboard-teacher"></i>Nossa Equipe</h2>
+              <p>A equipe é formada por profissionais especializados e comprometidos com o desenvolvimento dos alunos. Nossa misão é promover conhecimento, socialização formando nossos alunos para se tornarem cidadãos competentes.</p>
+            </div>
+            <button class="">Veja mais</button>
           </div>
           <div class="card">
-            <h2><i class="fas fa-school"></i>Nossa Estrutura</h2>
-            <p>O Marcelo Tulman Neto possuí ambientes com grandes dimensões, 12 salas de aula, uma quadra coberta e espaço para socialização dos alunos durante os intervalos.</p>
+            <div class="text-card">
+              <h2><i class="fas fa-school"></i>Nossa Estrutura</h2>
+              <p>O Marcelo Tulman Neto possuí ambientes com grandes dimensões, 12 salas de aula, uma quadra coberta e espaço para socialização dos alunos durante os intervalos.</p>
+            </div>
+            <button class="">Veja mais</button>
           </div>
           <div class="card">
-            <h2><i class="fas fa-book"></i>Nossa Proposta</h2>
-            <p>Nosso objetivo é desenvolver o diálogo, a participação e a cooperação dos alunos, através de atividades práticas e teóricas do dia a dia, a fim de torná-los cidadãos competentes, conscientes e responsáveis</p>
+            <div class="text-card">
+              <h2><i class="fas fa-book"></i>Nossa Proposta</h2>
+              <p>Nosso objetivo é desenvolver o diálogo, a participação e a cooperação dos alunos, através de atividades práticas e teóricas do dia a dia, a fim de torná-los cidadãos competentes, conscientes e responsáveis</p>
+            </div>
+            <button class="">Veja mais</button>
           </div>
         </div>
       </div>
@@ -146,46 +159,54 @@
       <div class="project-content">
         <h1>Projetos</h1>
         <p>Projetos e festas realizadas pelos alunos, dando oportunidade para eles desenvolverem e aprimorarem habilidades individuais, e em conjunto.</p>
-        <div class="card-projects">
+        <div class="container">
           <div class="card">
-            <div class="card-img">
-              <img src="img/projetos/projeto1.webp">
-            </div>
             <div class="content-card">
-              <h2>Talk Tulman Show</h2>
-              <p>Projeto desenvolvido para capacitar os alunos para debates e entrevistas falando sobre temas como bullyng, cotas raciais, maioridade penal, etc.</p>
-              <button class="btn">Veja mais</button>
+              <div class="card-img">
+                <img src="img/projetos/projeto1.webp">
+              </div>
+              <div class="text-card">
+                <h2>Talk Tulman Show</h2>
+                <p>Projeto desenvolvido para capacitar os alunos para debates e entrevistas falando sobre temas como bullyng, cotas raciais, maioridade penal, etc.</p>
+              </div>
             </div>
+            <button class="">Veja mais</button>
           </div>
           <div class="card">
-            <div class="card-img">
-              <img src="img/projetos/projeto2.webp">
-            </div>
             <div class="content-card">
-              <h2>Tulman News</h2>
-              <p>Projeto desenvolvido para informar os alunos de acontecimentos da escola, como reunião de pais, e também de acontecimentos como prevenção e sintomas de doenças.</p>
-              <button class="btn">Veja mais</button>
+              <div class="card-img">
+                <img src="img/projetos/projeto2.webp">
+              </div>
+              <div class="text-card">
+                <h2>Tulman News</h2>
+                <p>Projeto desenvolvido para informar os alunos de acontecimentos da escola, como reunião de pais, e também de acontecimentos como prevenção e sintomas de doenças.</p>
+              </div>
             </div>
+            <button class="">Veja mais</button>
           </div>
           <div class="card">
-            <div class="card-img">
-              <img src="img/projetos/projeto3.webp">
-            </div>
             <div class="content-card">
-              <h2>Consciência Negra</h2>
-              <p>Projeto que já vem sendo realizado há mais de 5 anos, celebrando o dia da Consciência Negra, e trazendo conhecimento sobre a cultura e seus costumes.</p>
-              <button class="btn">Veja mais</button>
+              <div class="card-img">
+                <img src="img/projetos/projeto3.webp">
+              </div>
+              <div class="text-card">
+                <h2>Consciência Negra</h2>
+                <p>Projeto que já vem sendo realizado há mais de 5 anos, celebrando o dia da Consciência Negra, e trazendo conhecimento sobre a cultura e seus costumes.</p>
+              </div>
             </div>
+            <button class="">Veja mais</button>
           </div>
           <div class="card">
-            <div class="card-img">
-              <img src="img/projetos/projeto4.webp">
-            </div>
             <div class="content-card">
-              <h2>Festa da Primavera</h2>
-              <p>Festa realizada para celebrar a chegada da nova estação, desenvolvendo a criatividade dos alunos para apresentações do show de talentos e decorações do ambiente.</p>
-              <button class="btn">Veja mais</button>
+              <div class="card-img">
+                <img src="img/projetos/projeto4.webp">
+              </div>
+              <div class="text-card">
+                <h2>Festa da Primavera</h2>
+                <p>Festa realizada para celebrar a chegada da nova estação, desenvolvendo a criatividade dos alunos para apresentações do show de talentos e decorações do ambiente.</p>
+              </div>
             </div>
+            <button class="">Veja mais</button>
           </div>
         </div>
       </div>
